fix: typo and argument

--- a/posts/interpreting-adjoint-functors/tikz/g-isomorphism-collection-square.tex
+++ b/posts/interpreting-adjoint-functors/tikz/g-isomorphism-collection-square.tex
@@ -33,7 +33,7 @@
 	\arrow["{\yo(G_{\Theta}(g))}", from=3-1, to=1-1]
 	\arrow["{\theta_Y^{-1}}", from=3-1, to=3-2]
 	\arrow["{\yo(\tau_Y)}"', curve={height=30pt}, from=3-1, to=3-3]
-	\arrow["{\yo(g)}"{description}, 
+	\arrow["{\yo_{\!F}(g)}"{description}, 
 	       from=3-2, to=1-2,
 	       every label/.append style={fill=labelbg, inner sep=1pt}]
 	\arrow["{\widetilde{\theta}_Y}", from=3-2, to=3-3]
