--- a/posts/interpreting-adjoint-functors/tikz/g-functoriality-square-pasted.tex
+++ b/posts/interpreting-adjoint-functors/tikz/g-functoriality-square-pasted.tex
@@ -25,10 +25,10 @@
         && {\mathrm{Hom}_{\mathscr{C}}(-, G_{Y''})}
     %
     \arrow["{\theta_Y}", from=1-1, to=1-3]
-    \arrow["{\yo(g)}"', from=1-1, to=3-1]
+    \arrow["{\yo_{\!F}(g)}"', from=1-1, to=3-1]
     \arrow["{\yo(G_\Theta(g))}", from=1-3, to=3-3]
     \arrow["{\theta_{Y'}}"{description}, from=3-1, to=3-3]
-    \arrow["{\yo(h)}"', from=3-1, to=5-1]
+    \arrow["{\yo_{\!F}(h)}"', from=3-1, to=5-1]
     \arrow["{\yo(G_\Theta(h))}", from=3-3, to=5-3]
     \arrow["{\theta_{Y''}}"', from=5-1, to=5-3]
 \end{tikzcd}.
