--- a/posts/interpreting-adjoint-functors/tikz/g-functoriality-square.tex
+++ b/posts/interpreting-adjoint-functors/tikz/g-functoriality-square.tex
@@ -18,7 +18,7 @@
 	\\
 	{\mathrm{Hom}_{\mathscr{D}}(F[-], Y')} && {\mathrm{Hom}_{\mathscr{C}}(-, G_{Y'})}
 	\arrow["{\theta_Y}", from=1-1, to=1-3]
-	\arrow["{\text{\japanesefont よ}(g)}"', from=1-1, to=3-1]
+	\arrow["{\text{\japanesefont よ}_{\!F}(g)}"', from=1-1, to=3-1]
 	\arrow["{\text{\japanesefont よ}(G_\Theta(g))}", from=1-3, to=3-3]
 	\arrow["{\theta_{Y'}}"', from=3-1, to=3-3]
 \end{tikzcd}
