--- a/math/uct/tex/config/cmd.tex
+++ b/math/uct/tex/config/cmd.tex
@@ -58,6 +58,7 @@
 % Miscellaneous operators
 % ==============================
 \DeclareMathOperator{\spn}{span}
+\DeclareMathOperator{\im}{im}
 \DeclareMathOperator{\trace}{trace}
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\Specmax}{Specmax}
