--- a/math/uct/tex/config/fmt.tex
+++ b/math/uct/tex/config/fmt.tex
@@ -1,4 +1,4 @@
-\title{\textsc{\textbf{\Large An Introduction to Sheaves}}}
+\title{\textsc{\textbf{\Large The Universal Coefficient Theorems}}}
 \author{\normalsize J. Mensah}
 \date{\normalsize }
 
