--- a/math/uct/tex/main.tex
+++ b/math/uct/tex/main.tex
@@ -14,7 +14,15 @@
 
 \maketitle
 
+\tableofcontents
+
 \input{section/introduction}
+\input{section/derived}
+\input{section/tor}
+\input{section/ext}
+\input{section/uct}
+\input{section/kunneth}
+\input{section/applications}
 
 \bibliographystyle{alpha}
 \bibliography{references}
