--- a/math/uct/tex/config/env.tex
+++ b/math/uct/tex/config/env.tex
@@ -20,6 +20,7 @@
 \newtheorem{definition}[theorem]{Definition}
 \newtheorem{example}[theorem]{Example}
 \newtheorem{remark}{Remark}[section]
+\newtheorem{exercise}{Exercise}[section]
 
 \numberwithin{equation}{section}
 
