--- a/math/monotonic/tex/config/pkg.tex
+++ b/math/monotonic/tex/config/pkg.tex
@@ -22,7 +22,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[mlmodern]{fontsetup}
 \usepackage{mathrsfs}         % math script fonts
-
+\usepackage[font=scriptsize,labelfont={bf, scriptsize}]{caption}
 
 % ==============================
 % Graphics & Diagrams
@@ -31,6 +31,7 @@
 \usepackage{tikz}             % general TikZ
 \usepackage{tikz-cd}          % commutative diagrams
 \usepackage{quiver}           % category-style diagrams
+\usetikzlibrary{patterns}
 
 % ==============================
 % Hyperlinks / Colors
