--- a/math/monotonic/tex/main.tex
+++ b/math/monotonic/tex/main.tex
@@ -4,7 +4,6 @@
 \input{config/env.tex}
 \input{config/fmt.tex}
 \input{config/cmd.tex}
-
  
 \DeclareEmphSequence{\itshape}
 
@@ -15,13 +14,13 @@
 \maketitle
 
 \abstract{
-  We extend the definition of monotonicity given in \cite{} to higher dimensional domains and establish a criterion which implies that a given domain is monotone with respect to at least one direction in terms of an inequality involving the total absolute Gauss-Kronecker curvature of its boundary. As a corollary of this result, we show that all polygons with five or fewer sides are monotone.
+  We extend the definition of monotonicity given in \cite{preparata1985} to higher dimensional domains and establish a criterion which implies that a given domain is monotone with respect to at least one direction in terms of an inequality involving the total absolute Gauss-Kronecker curvature of its boundary. As a corollary of this result, we show that all polygons with five or fewer sides are monotone.
 }
-
-\tableofcontents
 
 \input{section/introduction}
 \input{section/curvature}
+
+\newpage 
 
 \bibliographystyle{alpha}
 \bibliography{references}
